Change log for python-messaging

0.7	X X X 2012
        * [mp] support added for null dirq

0.6	Tue Apr 17 2012
	* [mp] improvements and bug fixing

0.5	Fri Jan 20 2012
	* [mp] various optimizations and bug fixing

0.2	Thu Nov 24 2011
	* [mp] fixing bug affecting compression
	* [mp] performance improvements

0.1	Thu Nov 17 2011
	* [mp] first release

[mp] = Massimo Paladin <Massimo.Paladin@cern.ch>